--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
-    "Lua.diagnostics.globals": [
-        "playdate",
-        "AnimatedSprite"
+    "Lua.workspace.library": [
+        "/usr/bin/PlaydateSDK-1.11.1/CoreLibs"
     ]
 }
