--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,10 @@
     "image": "ghcr.io/playdate-projects/playdate-docker:main",
     "customizations": {
       "vscode": {
-        "extensions": ["trixnz.vscode-lua"]
+        "extensions": [
+        "midouest.playdate-debug",
+        "sumneko.lua"
+      ]
       }
     },
     "remoteUser": "playdate-sdk",
