lua parser really just exploded smh

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     ],
     "Lua.diagnostics.globals": [
         "playdate",
-        "kTextAlignment"
+        "kTextAlignment",
+        "SetUpLevelGen"
     ],
     "Lua.runtime.special" : {
         "import" : "require"
