--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "AnimatedSprite"]
-	path = AnimatedSprite
+	path = src/AnimatedSprite
 	url = https://github.com/Whitebrim/AnimatedSprite
